# Haskell

./: CMakeLists.txt  Haskell.sln  README.md
Haskell/: HList.h  HTuple.h  Haskell.cpp  Haskell.vcxproj  Haskell.vcxproj.filters  Homework5.cpp  Integer.h  List.h  Makefile  Parser.cpp  Prelude.cpp  Prelude.h  Source.cpp  Source1.cpp  Tuple.h  Utility.h
Haskell/Examples/: Example1.cpp  Example2.cpp  Example3.cpp
Haskell/Source/: HList.h  Integer.h  Prelude.cpp  Prelude.h  Vector.h
